--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
             <artifactId>spring-security-oauth2-jose</artifactId>
             <version>5.5.1</version>
         </dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
